# DL_Proyecto

./: .gitignore  01_EDA_Preprocessing.ipynb  02_Model_LSTM.ipynb  03_Model_BiGRU.ipynb  04_Model_ConvLSTM.ipynb  05_Results_Comparison.ipynb  06_Model_Transformer.ipynb  README.md  pyproject.toml
results/data/balanced_ahr/: X_test.npy  X_train.npy  X_val.npy  dataset_clean.csv  meta.json  tokenizer.pkl  y_test.npy  y_train.npy  y_val.npy
results/data/big_ahr/: X_test.npy  X_val.npy  meta.json  tokenizer.pkl  y_test.npy  y_train.npy  y_val.npy
results/metrics/: BiGRU_results.json  BiGRU_summary.csv  ConvLSTM_results.json  ConvLSTM_summary.csv  FINAL_summary.csv  LSTM_results.json  LSTM_summary.csv  Transformer_results.json  Transformer_summary.csv
